# simorgh-chatbot-ekc-deploy

./: .gitignore  ARCHITECTURE_REDESIGN.md  ENHANCEMENT_PLAN.md  GITHUB_SECRETS.md  IMPLEMENTATION_GUIDE_OENUM_AND_FEATURES.md  LOGIN_FLOW_DOCUMENTATION.md  MIGRATION_SESSION_SYSTEM.md  MYSQL_SETUP_GUIDE.md  PR_DESCRIPTION.md  README.md  SETUP_SECRETS.md  SIMORGH_FIXES_REQUIRED.md  error_logs  example-doc1.md  example-doc2  package-lock.json  package.json  prompt
.github/workflows/: autmatic-claude-ai-merging.yml  deploy-debug.sh  deploy-improved.sh  deploy-rsync.sh  deploy-with-timeouts.yml.example  eplan-vms-deploy.yml  llm-deploay.yml  llm-deploy-runner.yml  llm-deploy.yml  release-deploy.yml  simorgh-deploy-runner.yml  simorgh-deploy.yml
host-nginx-config/: DEPLOY_HTTPS.md  certbot-renew-hook.sh  default-ssl.conf  default.conf  setup-certbot.sh
llms/: .deployignore  .env.example  README.md  check-models.sh  cleanup-incomplete-models.sh  deploy-llm-service.sh  docker-compose.local.yml  docker-compose.no-wait.yml  docker-compose.yml  hello.txt  tmp
llms/ai/: .dockerignore  Dockerfile  README.md  ai_server.py  app.py  pytest.ini  requirements.txt
llms/gpu_monitor/: Dockerfile  monitor.py
llms/initializer/: Dockerfile  init-config.yaml  init-models.py
llms/nginx_configs/: nginx.conf
llms/scripts/: README.md  deploy-debug.sh  deploy-improved.sh  deploy-rsync.sh
simorgh-agent/: .env.example  REFACTORING_PLAN.md  docker-compose.local.yml  docker-compose.yml
simorgh-agent/backend/CocoIndex/cocoindex-pipeline/: pipeline.py  pyproject.toml
(+229 files in other folders)
